; ModuleID = '/home/carl/AnghaBench/git/extr_ident.c_ident_default_name.c'
source_filename = "/home/carl/AnghaBench/git/extr_ident.c_ident_default_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i32 }

@ident_config_given = common dso_local global i32 0, align 4
@IDENT_NAME_GIVEN = common dso_local global i32 0, align 4
@git_default_name = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@default_name_is_bogus = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ident_default_name() #0 {
  %1 = load i32, i32* @ident_config_given, align 4
  %2 = load i32, i32* @IDENT_NAME_GIVEN, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %12, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @git_default_name, i32 0, i32 1), align 8
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %5
  %9 = call i32 @xgetpwuid_self(i32* @default_name_is_bogus)
  %10 = call i32 @copy_gecos(i32 %9, %struct.TYPE_4__* @git_default_name)
  %11 = call i32 @strbuf_trim(%struct.TYPE_4__* @git_default_name)
  br label %12

12:                                               ; preds = %8, %5, %0
  %13 = load i8*, i8** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @git_default_name, i32 0, i32 0), align 8
  ret i8* %13
}

declare dso_local i32 @copy_gecos(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @xgetpwuid_self(i32*) #1

declare dso_local i32 @strbuf_trim(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
